--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    
 </head>
 <body>
     
 </body>
-<!-- min 5:40 -->
+<script src="./index.js"></script>
+<!-- min 13:03 -->
 </html>
