--- a/8. Tasker/index.html
+++ b/8. Tasker/index.html
@@ -12,7 +12,7 @@
     </div>
     <form class="form">
       <label class="add-task-label">Add New Task</label>
-      <input type="textInput" id="input-task">
+      <input type="text" id="input-task" placeholder="Add new Task">
       <button class="submitBtn">Submit</button>
     </form>
     <div class="lista"></div>
