--- a/8. Tasker/index.html
+++ b/8. Tasker/index.html
@@ -12,10 +12,14 @@
     </div>
     <form class="form">
       <label class="add-task-label">Add New Task</label>
-      <input type="text" id="input-task" placeholder="Add new Task">
+      <input type="text" class="input-task" placeholder="Add new Task">
       <button class="submitBtn">Submit</button>
     </form>
-    <div class="lista"></div>
+    <div class="container-lista">
+      <ul class="lista">
+        <li></li>
+      </ul>
+    </div>
     <div class="container-buton">
       <button class="clear-list-btn">Clear List</button>
     </div>
