--- a/9. Calculator/index.html
+++ b/9. Calculator/index.html
@@ -10,19 +10,19 @@
     <div id="calculator">
         <input id="display" readonly>
         <div id="keys">
-            <button onclick="appendToDisplay('+')">+</button>
+            <button onclick="appendToDisplay('+')" class="operator-btn">+</button>
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
-            <button onclick="appendToDisplay('-')">-</button>
+            <button onclick="appendToDisplay('-')"class="operator-btn">-</button>
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
             <button onclick="appendToDisplay('6')">6</button>
-            <button onclick="appendToDisplay('*')">*</button>
+            <button onclick="appendToDisplay('*')"class="operator-btn">*</button>
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="appendToDisplay('/')">/</button>
+            <button onclick="appendToDisplay('/')"class="operator-btn">/</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
@@ -31,7 +31,7 @@
     </div>
 
 <!-- https://www.youtube.com/watch?v=I5kj-YsmWjM -->
- <!-- 7:24 -->
+ <!-- 11:20 -->
 
 
     <script src="./index.js"></script>
