--- a/11. CSS Grid/index.html
+++ b/11. CSS Grid/index.html
@@ -3,71 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recenzii</title>
+    <title>CSS GRID</title>
     <link rel="stylesheet" href="./grid.css" />
   </head>
-  <body>
-    <div class="user-container">
-      <div class="user-image-description">
-        <img src="./IMG/user1.jpg" alt="User1" width="50" height="50" />
-        <p class="titlu">Un produs foarte bun</p>
-      </div>
-      <p class="comentariu">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore labore
-        facilis consequuntur consequatur ipsam soluta iusto architecto pariatur
-        distinctio, sint temporibus eaque, esse ut voluptatum numquam, magnam
-        facere nesciunt. Doloribus.
-      </p>
-    </div>
- <div class="user-container">
-      <div class="user-image-description">
-        <img src="./IMG/user2.jpg" alt="User1" width="50" height="50" />
-        <p class="titlu">Un produs foarte bun</p>
-      </div>
-      <p class="comentariu">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore labore
-        facilis consequuntur consequatur ipsam soluta iusto architecto pariatur
-        distinctio, sint temporibus eaque, esse ut voluptatum numquam, magnam
-        facere nesciunt. Doloribus.
-      </p>
-    </div>
-     <div class="user-container">
-      <div class="user-image-description">
-        <img src="./IMG/user3.jpg" alt="User1" width="50" height="50" />
-        <p class="titlu">Un produs foarte bun</p>
-      </div>
-      <p class="comentariu">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore labore
-        facilis consequuntur consequatur ipsam soluta iusto architecto pariatur
-        distinctio, sint temporibus eaque, esse ut voluptatum numquam, magnam
-        facere nesciunt. Doloribus.
-      </p>
-    </div>
-     <div class="user-container">
-      <div class="user-image-description">
-        <img src="./IMG/user4.jpg" alt="User1" width="50" height="50" />
-        <p class="titlu">Un produs foarte bun</p>
-      </div>
-      <p class="comentariu">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore labore
-        facilis consequuntur consequatur ipsam soluta iusto architecto pariatur
-        distinctio, sint temporibus eaque, esse ut voluptatum numquam, magnam
-        facere nesciunt. Doloribus.
-      </p>
-    </div>
-     <div class="user-container">
-      <div class="user-image-description">
-        <img src="./IMG/user5.jpg" alt="User1" width="50" height="50" />
-        <p class="titlu">Un produs foarte bun</p>
-      </div>
-      <p class="comentariu">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore labore
-        facilis consequuntur consequatur ipsam soluta iusto architecto pariatur
-        distinctio, sint temporibus eaque, esse ut voluptatum numquam, magnam
-        facere nesciunt. Doloribus.
-      </p>
-    </div>
-   
 
+  <body>
+    <div class="container">
+      <div class="article1">
+        <img src="./IMG/user1.jpg" alt="" width="50" height="50" />
+        <article>
+          <h2>Un produs foarte bun</h2>
+          "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
+          labore facilis consequuntur consequatur ipsam soluta iusto architecto
+          pariatur distinctio, sint temporibus eaque, esse ut voluptatum
+          numquam, magnam facere nesciunt. Doloribus."
+        </article>
+      </div>
+
+      <div class="article2">
+        <img src="./IMG/user2.jpg" alt="" width="50" height="50" />
+        <article>
+          <h2>Imi place</h2>
+          "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
+          labore facilis consequuntur consequatur ipsam soluta iusto architecto
+          pariatur distinctio, sint temporibus eaque, esse ut voluptatum
+          numquam, magnam facere nesciunt. Doloribus."
+        </article>
+      </div>
+      <div class="article3">
+        <img src="./IMG/user3.jpg" alt="" width="50" height="50" />
+        <article>
+          <h2>Am facut retur</h2>
+          "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
+          labore facilis consequuntur consequatur ipsam soluta iusto architecto
+          pariatur distinctio, sint temporibus eaque, esse ut voluptatum
+          numquam, magnam facere nesciunt. Doloribus."
+        </article>
+      </div>
+      <div class="article4">
+        <img src="./IMG/user4.jpg" alt="" width="50" height="50" />
+        <article>
+          <h2>Foarte util</h2>
+          "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
+          labore facilis consequuntur consequatur ipsam soluta iusto architecto
+          pariatur distinctio, sint temporibus eaque, esse ut voluptatum
+          numquam, magnam facere nesciunt. Doloribus."
+        </article>
+      </div>
+      <div class="article5">
+        <img src="./IMG/user5.jpg" alt="" width="50" height="50" />
+        <article>
+          <h2>Multumit</h2>
+          "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
+          labore facilis consequuntur consequatur ipsam soluta iusto architecto
+          pariatur distinctio, sint temporibus eaque, esse ut voluptatum
+          numquam, magnam facere nesciunt. Doloribus."
+        </article>
+      </div>
+    </div>
   </body>
 </html>
