--- a/11. CSS Grid/index.html
+++ b/11. CSS Grid/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="article1">
-        <img src="./IMG/user1.jpg" alt="" width="50" height="50" />
+        <img src="./IMG/user1.jpg" alt="" />
         <article>
           <h2>Un produs foarte bun</h2>
           "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
@@ -21,7 +21,7 @@
       </div>
 
       <div class="article2">
-        <img src="./IMG/user2.jpg" alt="" width="50" height="50" />
+        <img src="./IMG/user2.jpg" alt="" />
         <article>
           <h2>Imi place</h2>
           "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
@@ -31,7 +31,7 @@
         </article>
       </div>
       <div class="article3">
-        <img src="./IMG/user3.jpg" alt="" width="50" height="50" />
+        <img src="./IMG/user3.jpg" alt="" />
         <article>
           <h2>Am facut retur</h2>
           "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
@@ -41,7 +41,7 @@
         </article>
       </div>
       <div class="article4">
-        <img src="./IMG/user4.jpg" alt="" width="50" height="50" />
+        <img src="./IMG/user4.jpg" alt=""/>
         <article>
           <h2>Foarte util</h2>
           "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
@@ -51,7 +51,7 @@
         </article>
       </div>
       <div class="article5">
-        <img src="./IMG/user5.jpg" alt="" width="50" height="50" />
+        <img src="./IMG/user5.jpg" alt=""  />
         <article>
           <h2>Multumit</h2>
           "Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore
